[package]
name = "wakenrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive", "env"] }
clap_complete = "4.5.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
wol-rs = "1.0.1"
